  - added param --local-ip to force it in case of multiple IP addresses
- sipenumerate:
  - added verbose mode
- siprcrack: 
  - added param lenght to force the size of extensions
  - added param user to set the From and To user (by default is prefix+extension). If is set, the prefix only will be applied to Auth User
- siptshark:
  - new module to extract info from a PCAP file
- sipdigestleak:
  - added tls support
  - added param --local-ip to force it in case of multiple IP addresses
- sipscan:
  - added param --output-file to save results
  - added param -fp to fingerprinting
- global:
  - added class Color and para nocolor to show console responses in ansii
  - bug fixes

v3.1.0 (Sep/2022)
- Added parameter From Domain and To Domain to SipScan, SipSend, SipInvite, SipFlood and SipDigestLeak
- SipScan can load IPs or network ranges from a file
- Bug fixes in TLS connections
- New scripts rtpbleed, rtcpbleed and rtpbleedflood to exploit RTPBleed vulnerability

v3.0.0 (Apr/2022)
- New version coded in python
- Erased some scripts: sipsniff, sipspy and sipreport
- Renamed script sipcracker to siprcrack
- New script sipenumerate to enumerate available methods of a SIP sevice/server
- New script sipdump to extract SIP Digest authentications from a PCAP file
- New script sipcrack to crack the digest authentications within the SIP protocol

v2.0.5 (Jan/2022)
- sipflood.pl: new script to flood a SIP server
- sipcracker.pl: if all password are found, the script ends
- sipdigestleak.pl: added cnonce, nc and qop params when export files with sipdump format
- sipscan.pl: bug fixes

v2.0.4 (Aug/2020)
- Hostname to IP address resolution
- TLS support
- sipinvite.pl: Fixed ACK responses and added BYE message

v2.0.3 (Dec/2019)
- Fix manpage-has-bad-whatis-entry error in man pages
- sipscan.pl: Added -th param and bug fixes in threads
- Code optimized in several scripts

v2.0.2 (Dec/2019)
- Fixes in man pages
- Moved sipcrack to sipcracker

v2.0.1 (Dec/2019)
- Bug fixes